# rust-client

./: Cargo.toml
.github/workflows/: CI.yml
src/: main.rs
